trunk/Archive2/31/e30d8104eda6b1/output
main.cpp:6:11: error: using declaration in class refers into 'std::chrono::', which is not a class
    using std::chrono::microseconds;
          ^~~~~~~~~~~~~
main.cpp:12:5: error: unknown type name 'microseconds'; did you mean 'std::chrono::microseconds'?
    microseconds ms;
    ^~~~~~~~~~~~
    std::chrono::microseconds
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.2/../../../../include/c++/4.9.2/chrono:530:43: note: 'std::chrono::microseconds' declared here
    typedef duration<int64_t, micro>        microseconds;
                                            ^
2 errors generated.
